# osh

./: .gitignore  .method.cpp.swp  .method.h.swp  Analysis.ipynb  CMakeLists.txt  LABS.cpp  LABS.h  Makefile  README.md  bvec.cpp  bvec.h  labs.cpp  labs.h  main.cpp  method.cpp  method.h  methods.cpp  methods.h  python_env.nix  runner.cpp  runner.h  sa_results_1.txt  sa_results_2.txt  sa_results_3.txt  solver.cpp  solver.h
finalData/ma/n_15/: run0.csv  run1.csv  run10.csv  run11.csv  run12.csv  run13.csv  run14.csv  run15.csv  run16.csv  run17.csv  run18.csv  run19.csv  run2.csv  run20.csv  run21.csv  run22.csv  run23.csv  run24.csv  run25.csv  run26.csv  run27.csv  run28.csv  run29.csv  run3.csv  run30.csv  run31.csv  run32.csv  run33.csv  run34.csv  run35.csv  run36.csv  run37.csv  run38.csv  run39.csv  run4.csv  run40.csv  run41.csv  run42.csv  run43.csv  run44.csv  (+11 more)
finalData/ma/n_16/: run0.csv  run1.csv  run10.csv  run11.csv  run12.csv  run13.csv  run14.csv  run15.csv  run16.csv  run17.csv  run18.csv  run19.csv  run2.csv  run20.csv  run21.csv  run22.csv  run23.csv  run24.csv  run25.csv  run26.csv  run27.csv  run28.csv  run29.csv  run3.csv  run30.csv  run31.csv  run32.csv  run33.csv  run34.csv  run35.csv  run36.csv  run37.csv  run38.csv  run39.csv  run4.csv  run40.csv  run41.csv  run42.csv  run43.csv  run44.csv  (+10 more)
finalData/ma/n_17/: run0.csv  run1.csv  run10.csv  run11.csv  run12.csv  (+46 more)
include/: bvec.h  labs.h  labsoptimal.h  method.h  runner.h  solver.h
plotData/: gnuplotCmd.cmd  plot.sh
src/: bvec.cpp  labs.cpp  main.cpp  method.cpp  runner.cpp  solver.cpp
(+11188 files in other folders)
